get president and vice president photo
